--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <body>
     <div class="container-fluid">
       <h1>PIZZA time!</h1>
-
-      <div class="size">
-        <h2>Please select size:</h2>
-        <select class="form-control">
-          <option>Small</option>
-          <option>Medium</option>
-          <option>Large</option>
-        </select>
-        <br>
-      </div>
       <form>
+        <div class="size">
+          <h2>Please select size:</h2>
+          <select class="form-control">
+            <option>Small</option>
+            <option>Medium</option>
+            <option>Large</option>
+          </select>
+          <br>
+        </div>
+
         <div class="toppings">
           <h2>Add extra topping to you favorite pizza:</h2>
           <div class="top1">
@@ -53,6 +53,7 @@
             <br>
           </div>
         </div>
+        <button type="submit" class="btn btn-success">Submit order</button>
       </form>
     </div>
   </body>
