add culc logic for toppings with size

--- a/index.html
+++ b/index.html
@@ -18,43 +18,22 @@
             <option value="medium" class="size">Medium ($11)</option>
             <option value="large" class="size">Large ($16)</option>
           </select>
-          <br>
+        </div>
+        <div class="checkbox">
+          <h2>Choose toppings:</h2>
+          <label>
+            <input id="top1" type="checkbox" value="ham">
+            Ham ($3)
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input id="top2" type="checkbox" value="mozarella">
+            Mozarella ($2)
+          </label>
         </div>
         <button type="submit" class="btn btn-success">Submit order</button>
       </form>
-
-        <!-- <div class="toppings">
-          <h2>Add extra topping to you favorite pizza:</h2>
-          <div class="top1">
-            <h3>Meat:</h3>
-            </div>
-            <select class="form-control" id = "size">
-              <option value="7">Ham (+$3)</option>
-              <option>Salami (+$3)</option>
-              <option>Pepperoni (+$3)</option>
-            </select>
-          <br> -->
-
-          <!-- <div class="top2">
-            <h3>Veggie:</h3>
-            <select class="form-control">
-              <option>Bell peppers (+$2)</option>
-              <option>Tomatos (+$2)</option>
-              <option>Broccoli (+$2)</option>
-            </select>
-          </div>
-          <br> -->
-
-          <!-- <div class="top3">
-            <h3>Cheese:</h3>
-            <select class="form-control">
-              <option>Mozzarella (+$3)</option>
-              <option>Cheddar (+$3)</option>
-              <option>Parmesan (+$3)</option>
-            </select>
-            <br>
-          </div> -->
-        <!-- </div> -->
     </div>
   </body>
 </html>
