add readme file and slyle to the body of html page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         </div>
         <button type="submit" class="btn btn-success">Submit order</button>
       </form>
+      <div class="total">
+        <h3>Your total is: </h3>
+        <p id="total-price"></p>
+      </div>
     </div>
   </body>
 </html>
